# linknova

./: .autoenv.zsh  .gitignore  Cargo.toml  README.md  diesel.toml  local-server.sh  local.env  local.sh
commons/linkdb/: Cargo.toml
commons/linkdb/src/: lib.rs
commons/linkdb/src/bookmark/: cat_map.rs  mod.rs  query.rs  types.rs
commons/linkdb/src/category/: mod.rs  query.rs  types.rs
commons/linkdb/src/topic/: mod.rs  query.rs  types.rs
commons/linkdb/src/topic_cat_map/: mod.rs  query.rs
dj/linknova/: apps.py  models.py
dj/linknova/migrations/: 0001_initial.py  0002_alter_bookmark_title.py  0002_auto_20240915_1445.py  0002_auto_20240915_1543.py  0002_auto_20240918_1417.py  0002_bookmark_bookmarkcategorymapping.py  0003_alter_bookmark_title.py  0003_alter_bookmarkcategorymapping_unique_together_and_more.py
dj/proj/: settings.py
etc/: tasks.md
etc/apis/linknova/: Category Create.bru  Category List.bru  Topic Create.bru  Topic GET By name.bru  Topic GET.bru  Topic List.bru  bruno.json  list url.bru  save url.bru
etc/apis/linknova/bookmark/: Create.bru  GET.bru  folder.bru
etc/apis/linknova/category/: Cat-Topic Map.bru  Create.bru  Get.bru  folder.bru
etc/apis/linknova/topic/: Topic Create.bru  folder.bru
etc/docs/: apis.md  bookmark.md  categories.md  news-app.md  reddit-apis.md  topics.md
etc/settings/: default.toml  settings-dev.toml  settings-local.toml  settings-prod.toml
etc/zsh/: auto.sh
service/: Cargo.toml
service/db/: Cargo.toml
service/db/src/: lib.rs  schema.rs
service/src/: ctx.rs  errors.rs  lib.rs  main.rs  router.rs
service/src/api/: category.rs  get.rs  mod.rs  save.rs  topic.rs
service/src/controller/: category.rs  get.rs  mod.rs  response.rs  save.rs  topic.rs
service/src/controller/link/: bookmark.rs  cat.rs  mod.rs  topic.rs
service/src/controller/link/types/: bookmark.rs  cat.rs  mod.rs  topic.rs
service/src/hn/: apis.rs  controller.rs  mod.rs  router.rs
service/src/middlewares/: api.rs  mod.rs  user.rs
service/src/routes/: health.rs  hn.rs  link.rs  login.rs  mod.rs  statics.rs
service/src/services/: mod.rs  stat_svc.rs
service/src/services/link/: bookmark.rs  cat.rs  mod.rs  topic.rs
service/src/services/link/bookmark/: types.rs
service/src/services/link/cat/: types.rs
service/src/services/link/topic/: types.rs
service/src/settings/: mod.rs
service/src/utils/: http.rs
ui/: .eslintignore  .eslintrc.js  .gitignore  .htmlhintrc  .prettierignore  .stylelintrc.js  LINTING.md  README.md  index.html  package-lock.json  package.json  styles.css  tailwind.config.js
ui/prompts/: about-project.md  bookmark.md  login.md  topics.md
ui/scripts/: build.js
ui/src/: index.html
ui/src/bookmark/: index.html
ui/src/category/: index.html
ui/src/components/: login.html
ui/src/components/admin/: index.html
ui/src/components/admin/cats/: index.html
ui/src/components/admin/topics/: index.html
ui/src/login/: index.html
ui/src/static/css/: styles.css
ui/src/static/js/: api.js  app.js  bookmark-api.js  bookmark-modals.js  category-api.js  category-input.js  category.js  components.js  login.js  topic.js  utils.js
ui/src/static/js/pages/: bookmark.js  category.js  topic.js
ui/src/styles/: input.css
ui/src/topic/: index.html
