[workspace]
members = ["service", "service/db"]
exclude = ["etc", "dj"]
resolver = "2"

[workspace.dependencies]
thiserror = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-forest = { version = "0.1", features = [
    "ansi",
    "smallvec",
    "serde",
    "tokio",
] }
