[workspace]
members = [ "commons/linkdb","service"]
exclude = ["etc", "dj"]
resolver = "2"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# DB Related
sqlx = { version = "0.8", features = [
    "postgres",
    "json",
    "chrono",
    "runtime-tokio",
] }

# Logging related libraries
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-forest = { version = "0.1", features = [
    "ansi",
    "smallvec",
    "serde",
    "tokio",
] }
