[package]
name = "service"
version = "0.1.0"
edition = "2021"
authors = ["abrar.nitk@gmail.com"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "json",
    "chrono",
    "runtime-tokio",
] }
reqwest = { version = "0.11", features = ["default", "json"] }
futures = "0.3"
dotenv = { version = "0.15" }
thiserror = { workspace = true }
tower-http = { version = "0.5", features = ["trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
serde_derive = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-forest = { workspace = true }
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.15"